<resources>
    <string name="app_name">Pythagoras Theorem Calculator</string>
    <string name="pythagoras_theorem_calculator">Pythagoras Theorem Calculator</string>
    <string name="right_angled_triangle">Right Angled Triangle</string>
    <string name="side_a">Side A</string>
    <string name="Side_B">Side B</string>
    <string name="calculate">calculate</string>
    <string name="side_c">Side C =</string>
</resources>